# nclaude

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: ncheck.md  nclear.md  npending.md  nread.md  nsend.md  nwatch.md
commands/: check.md  clear.md  connect.md  hrecv.md  hsend.md  hub.md  listen.md  ncheck.md  npair.md  npending.md  nread.md  nsend.md  pending.md  read.md  send.md  status.md
docs/: reference.md
examples/: settings.json.example
hooks/: hooks.json
output-styles/: nclaude-coordinator.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: alias.md  check.md  listen.md  pair.md  pending.md  status.md  wait.md  wake.md  watch.md  whoami.md
plugin/config/: nclaude-rules.yaml
plugin/hooks/: check-messages.py  check-messages.sh  hooks.json  precompact-save.py  pretool-check.py  session-init.sh  start-watcher.sh  stop-check.py  stop-check.sh  subagent-stop.py
scripts/: __init__.py  client.py  hub.py  injector.py  mcp_nclaude.py  nclaude.py  swarm.py  swarm_daemon.py  swarm_poc.py  test_hub_client.py
skills/chat/: SKILL.md
src/nclaude/: __init__.py  __main__.py  aqua_bridge.py  cli.py  config.py
src/nclaude/commands/: __init__.py  alias.py  broadcast.py  chat.py  check.py  clear.py  hub.py  listen.py  pair.py  pending.py  read.py  resume.py  send.py  status.py  wait.py  watch.py  whoami.py
src/nclaude/rooms/: __init__.py  base.py  global_room.py  project.py
src/nclaude/storage/: __init__.py  (+3 more)
tests/: __init__.py  test_cli.py  test_commands.py  test_storage.py
(+4 files in other folders)
