[project]
name = "nclaude"
version = "1.0.0"
description = "Headless Claude-to-Claude messaging"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp"]
dev = ["pytest>=7.0"]

[project.scripts]
nclaude = "scripts.nclaude:main"
swarm = "scripts.swarm_daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = ["pytest>=7.0"]
